Adjusted padding for sections, fixed layout shifting and added background color to some sections.

--- a/styles/stylesmain.css
+++ b/styles/stylesmain.css
@@ -60,9 +60,15 @@ header > h1 {
 .content_container {
   display: flex;
   flex-direction: column;
-  height: 100dvh;
-  justify-content: space-evenly;
+  height: 75dvh;
+  justify-content: center;
   align-items: center;
+  gap: 1.2rem;
+  padding: 1.2rem;
+}
+
+.content_container:nth-of-type(odd) {
+  background-color: #e4d8d8;
 }
 
 .device_list {
@@ -111,10 +117,13 @@ header > h1 {
 }
 
 .alert {
+  display: flex;
+  align-items: center;
   animation-name: alert-grow;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  height: 150px;
 }
 
 @keyframes alert-grow {
